api/swim_form/src/tests/derive/form/newtype_enum_variant.stderr
error: Cannot use `newtype` annotation with enum variants
 --> $DIR/src/tests/derive/form/newtype_enum_variant.rs:4:14
  |
4 |     #[derive(Form)]
  |              ^^^^
